vlib/v/checker/tests/globals/name_conflict_with_const.vv
const (
	foo = 'abc'
)

__global (
	foo = 123
)
